objects/SGR_Plan_Age_Rate_Header__c.object
<CustomObject>
    <fields>
        <fullName>Corporate_Entity_Code__c</fullName>
        <label>Corporate Entity Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
                <value>
                    <fullName>NM</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FIPS_Code__c</fullName>
        <label>FIPS_Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Tobacco__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Tobacco</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Header_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Plan Header External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>SGR Plan Age Rate Headers</relationshipLabel>
        <relationshipName>SGR_Plan_Age_Rate_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Effective_Date__c</fullName>
        <label>Rate Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate_Effective__c</fullName>
        <formula>TEXT(YEAR(Rate_Effective_Date__c)/MONTH(Rate_Effective_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate_Effective</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Size__c</fullName>
        <label>Rate Size</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <formula>IF(ISPICKVAL(Plan__r.Line_Of_Business__c,&apos;V&apos;) ,&apos;Per Member Per Month&apos;,&apos; &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_Area_Number__c</fullName>
        <label>Rating Area Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGR_Plan_Id__c</fullName>
        <label>SGR Plan Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGR_Product_Code_Value__c</fullName>
        <label>SGR Product Code Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>SGR Plan Age Rate Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Division__c</columns>
        <columns>FIPS_Code__c</columns>
        <columns>Is_Tobacco__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Plan__c</columns>
        <columns>Rate_Effective_Date__c</columns>
        <columns>Rate_Size__c</columns>
        <columns>Rating_Area_Number__c</columns>
        <columns>SGR_Plan_Id__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ARH-{0000000}</displayFormat>
        <label>SGR Plan Age Rate Heather Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SGR Plan Age Rate Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>